Fix sonar comments